# Evolution

./: .doc.txt.swp  .gitignore  .linter-clang-includes  CMakeLists.txt  README  doc.txt  doc.txt~
doc/: impl.txt  logic.txt
src/: Bug.cpp  Bug.hpp  HasEnergy.hpp  Intelligence.hpp  Object.hpp  Plant.cpp  Plant.hpp  World.cpp  World.hpp  main.cpp
